# handson-mlp-notes

./: 10_neural_nets_with_pytorch.ipynb  pyproject.toml  tools_numpy.ipynb
personal/: 10_basic_training_loop.ipynb  10_testing_reshape.ipynb
